i dont know what im doing

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <p>This is a small project on a flask blog webpage</p>
 {% endblock content %}
